--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Terabithia.JS",
     "description": "Extension for testing and development of the Terabithia.JS framework.",
-    "version": "1.1.0",
+    "version": "1.1.2",
     "manifest_version": 3,
     "host_permissions": ["<all_urls>"],
     "permissions": ["storage"],
@@ -11,12 +11,12 @@
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "js": ["libraries/terabithia.js"]
+            "js": ["terabithia/content.js"]
         }
     ],
     "web_accessible_resources": [
         {
-            "resources": ["images/*", "libraries/*"],
+            "resources": ["images/*", "terabithia/*"],
             "matches": ["<all_urls>"]
         }
     ],
